<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextEditor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="color">颜色</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="size">大小</string>
    <string name="big">增大</string>
    <string name="small">缩小</string>
    <string name="type">样式</string>
    <string name="bold">加粗</string>
    <string name="italic">倾斜</string>
    <string name="moren">默认</string>
    <string name="content">内容</string>
    <string name="text_text">测试文字，测试文字</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_size_listener">SizeListener</string>
    <string name="title_activity_my_button">MyButton</string>

</resources>